Creating FFT class

--- a/AppTwo2/app/src/main/res/layout/activity_main.xml
+++ b/AppTwo2/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,14 @@
         android:layout_marginTop="102dp"
         android:onClick="GoToAcc"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FFT"
+        android:id="@+id/button_fft"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="202dp"
+        android:onClick="GoToFFT"/>
+
 
 </RelativeLayout>
